kubernetes/app.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
      version: stable
  template:
    metadata:
      labels:
        app: app
        version: stable
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: app
          image: ghcr.io/remla24-02/app:v0.2.2
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          command: ["python", "manage.py", "runserver", "0.0.0.0:5000"]
          resources:
            limits:
              cpu: 500m
              memory: "512Mi"
            requests:
              cpu: 200m
              memory: "256Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: canary
  template:
    metadata:
      labels:
        app: app
        version: canary
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: app
          image: ghcr.io/remla24-02/app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          command: ["python", "manage.py", "runserver", "0.0.0.0:5000"]
          resources:
            limits:
              cpu: 500m
              memory: "512Mi"
            requests:
              cpu: 200m
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      appProtocol: http
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtual-service
spec:
  gateways:
    - my-gateway
  hosts:
    - "app.local"
  http:
    - match:
        - headers:
            Cookie:
              regex: .*userAffinity=stable.*
      route:
        - destination:
            host: app
            subset: stable
            port:
              number: 5000
    - match:
        - headers:
            Cookie:
              regex: .*userAffinity=canary.*
      route:
        - destination:
            host: app
            subset: canary
            port:
              number: 5000
    - route:
        - destination:
            host: app
            subset: stable
            port:
              number: 5000
          weight: 90
        - destination:
            host: app
            subset: canary
            port:
              number: 5000
          weight: 10
          headers:
            response:
              set:
                Set-Cookie: userAffinity=canary; Max-Age=3600000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app-destination-rule
spec:
  host: app
  subsets:
    - labels:
        version: stable
      name: stable
      trafficPolicy:
        loadBalancer:
          consistentHash:
            httpCookie:
              name: userAffinity=stable
              ttl: 1h
    - labels:
        version: canary
      name: canary
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: filter-local-ratelimit-svc
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      app: app
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: "envoy.filters.network.http_connection_manager"
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.local_ratelimit
          typed_config:
            "@type": type.googleapis.com/udpa.type.v1.TypedStruct
            type_url: type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
            value:
              stat_prefix: http_local_rate_limiter
              token_bucket:
                max_tokens: 30
                tokens_per_fill: 30
                fill_interval: 60s
              filter_enabled:
                runtime_key: local_rate_limit_enabled
                default_value:
                  numerator: 100
                  denominator: HUNDRED
              filter_enforced:
                runtime_key: local_rate_limit_enforced
                default_value:
                  numerator: 100
                  denominator: HUNDRED
              response_headers_to_add:
                - append: false
                  header:
                    key: x-local-rate-limit
                    value: 'true'
